--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.10.0
 Django==5.2.7
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+factory_boy==3.3.3
+Faker==37.12.0
 flake8==7.3.0
 mccabe==0.7.0
 pycodestyle==2.14.0
@@ -9,3 +11,4 @@ pyflakes==3.4.0
 PyJWT==2.10.1
 python-dotenv==1.1.1
 sqlparse==0.5.3
+tzdata==2025.2
