update ALLOWED_HOSTS from env file

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,5 @@
 SECRET_KEY=
 DEBUG=
-ACCESS_TOKEN_LIFETIME=
-REFRESH_TOKEN_LIFETIME=
+ACCESS_TOKEN_LIFETIME= # in minutes
+REFRESH_TOKEN_LIFETIME= # in minutes
+ALLOWED_HOSTS= # comma separated values
